# mlet-tech-challenge-fase2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements-serving.txt  requirements.txt
.github/workflows/: ci.yml  pipeline.yml  security.yml
deploy/helm/recsys/: Chart.yaml  values.yaml
deploy/helm/recsys/templates/: api.yaml  grafana.yaml  prometheus.yaml
docs/: deploy-k8s.md  etapa-01-resumo.md  etapa-02-resumo.md  etapa-03-resumo.md  etapa-04-modelo-embedding.md  ml-canvas.md  model_card.md
grafana-prometheus/grafana/dashboards/: recsys-api.json
grafana-prometheus/grafana/provisioning/dashboards/: dashboards.yml
grafana-prometheus/prometheus/: prometheus.yml
metrics/: metrics.json  metrics_embedding.json  metrics_svd.json
notebooks/: 01_eda.ipynb
scripts/: generate_dataset.py  generate_dataset_enriched.py  validate_env.py
src/recsys/: __init__.py  config.py  registry.py  tracking.py
src/recsys/api/: main.py  model_service.py  prometheus_metrics.py  schemas.py
src/recsys/data/: __init__.py  factory.py  generator.py  generator_enriched.py  schema.py
src/recsys/evaluation/: metrics.py
src/recsys/features/: build_features.py
src/recsys/models/: __init__.py  base.py  baseline.py  early_stopping.py  embedding.py  fallback.py  svd.py
src/recsys/pipeline/: evaluate.py  evaluate_embedding.py  evaluate_svd.py  feature_eng.py  generate.py  params.py  preprocess.py  train.py  train_embedding.py  train_svd.py
src/recsys/preprocessing/: __init__.py  encoder.py  splitter.py
src/recsys/utils/: __init__.py  logging_utils.py  seed.py
tests/: test_registry.py  test_tracking.py
tests/api/: test_app.py  test_model_service.py  test_prometheus_metrics.py  test_schemas.py
tests/config/: test_config.py
tests/data/: test_factory.py  test_generator.py  test_generator_enriched.py
tests/evaluation/: test_metrics.py
tests/features/: test_build_features.py
tests/models/: test_baseline.py  test_early_stopping.py  test_embedding.py  test_fallback.py  test_svd.py
tests/pipeline/: test_params.py  test_smoke_pipeline.py
tests/preprocessing/: test_encoder.py  test_splitter.py
tests/utils/: test_logging_utils.py  test_seed.py
