# ============================================================================
# Tech Challenge Fase 2 — Configuração do projeto (Poetry + ruff + pytest)
# ----------------------------------------------------------------------------
# Centraliza:
#   - Metadados do pacote ([tool.poetry])
#   - Dependências de produção e dev ([tool.poetry.dependencies] e .group.dev)
#   - Configuração do linter/formatter Ruff ([tool.ruff])
#   - Configuração do pytest ([tool.pytest.ini_options])
#
# Princípio Clean Code aplicado: "uma única fonte da verdade" — em vez de
# espalhar configuração por setup.cfg, .ruff.toml, pytest.ini, mypy.ini, etc.,
# tudo fica aqui. Facilita manutenção e onboarding.
#
# Observação: o `poetry.lock` será gerado e commitado na Etapa 2.
# ============================================================================

[tool.poetry]
name = "recsys"
version = "0.1.0"
description = "Sistema de recomendação para e-commerce — Tech Challenge Fase 2 (FIAP)."
authors = ["MLET Grupo 4 <janotijr@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "recsys", from = "src" }]

# ----------------------------------------------------------------------------
# Dependências de produção
# ----------------------------------------------------------------------------
[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1"
pandas = "^2.2"
pyarrow = "^17.0"               # Backend Parquet do pandas
pydantic = "^2.9"
pydantic-settings = "^2.5"      # Configuração via .env
python-dotenv = "^1.0"
torch = "^2.4"                  # Rede neural (MLP / embedding)
scikit-learn = "^1.5"           # Pré-processamento e baselines
mlflow = "^2.16"                # Tracking de experimentos e Model Registry
dvc = "^3.0"                    # Versionamento de dados e pipeline reprodutível
scipy = "^1.14"                 # Métricas (NDCG, funções estatísticas)

# ----------------------------------------------------------------------------
# Dependências de desenvolvimento
# ----------------------------------------------------------------------------
# Separadas em grupo "dev": NÃO entram na imagem Docker de runtime.
[tool.poetry.group.dev.dependencies]
ruff = "^0.7"
pytest = "^8.3"
pytest-cov = "^5.0"
pre-commit = "^4.0"
matplotlib = "^3.9"             # Visualizações no EDA
seaborn = "^0.13"               # Gráficos estatísticos no EDA
ipykernel = "^6.29"             # Suporte a notebooks Jupyter no VSCode
nbformat = "^5.10.4"
nbconvert = "^7.17.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# Ruff — linter + formatter (substitui flake8, black, isort, pyupgrade)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "data", "models"]

[tool.ruff.lint]
# Regras ativadas (Clean Code: nomes descritivos, imports limpos, complexidade
# controlada). Ver https://docs.astral.sh/ruff/rules/ para referência.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (variáveis não usadas, imports quebrados, etc.)
    "I",    # isort (ordenação de imports)
    "B",    # flake8-bugbear (bugs comuns)
    "C90",  # mccabe (complexidade ciclomática)
    "N",    # pep8-naming
    "UP",   # pyupgrade (sintaxe moderna)
    "SIM",  # flake8-simplify
    "D",    # pydocstyle (docstrings)
    "ANN",  # flake8-annotations (type hints)
]
ignore = [
    "D100",  # missing docstring in public module (verboso demais p/ __init__)
    "D104",  # missing docstring in public package
    "D203",  # 1 blank line before class docstring (conflita com D211)
    "D213",  # multi-line docstring summary on second line (usamos primeira)
    "ANN101","ANN102",  # type hint em self/cls (redundante)
]

[tool.ruff.lint.mccabe]
# Limite de complexidade ciclomática — força funções pequenas e simples.
max-complexity = 8

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Testes podem ter funções sem docstring e nomes mais soltos.
"tests/**/*.py" = ["D", "ANN"]
# Scripts CLI podem ter um bloco main mais longo.
"scripts/**/*.py" = ["D103"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# Pytest
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Resolve `recsys` antes do `poetry install` — útil para rodar `pytest` direto
# em um clone fresco (CI / avaliador).
pythonpath = ["src"]
addopts = [
    "-ra",                       # mostra resumo de falhas/skips
    "--strict-markers",
    "--cov=recsys",
    "--cov-report=term-missing",
]
